Bug 455665 -  nsSplitterFrameInner crashes in some special case. r+sr=bzbarsky.