layout/xul/base/src/nsSplitterFrame.cpp
@@ -526,6 +526,8 @@ nsSplitterFrameInner::MouseUp(nsPresContext* aPresContext, nsGUIEvent* aEvent)
   delete[] mChildInfosAfter;
   mChildInfosBefore = nsnull;
   mChildInfosAfter = nsnull;
+  mChildInfosBeforeCount = 0;
+  mChildInfosAfterCount = 0;
 }
 
 void
